--- a/mycelium/templates/mycelium_base.html
+++ b/mycelium/templates/mycelium_base.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block css %}{{block.super}}
 <link rel="stylesheet" href="{{ MEDIA_URL }}css/mycelium_elements.css" type="text/css" media="screen" title="" charset="utf-8">
+<link rel="stylesheet" href="{{ MEDIA_URL }}css/contrib/jquery-ui-1.8.10.custom.css" type="text/css" media="screen" title="" charset="utf-8">
 {% endblock %}
 {% block javascript %}{{block.super}}
 <script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery.scrollTo-min.js"> </script>
