--- a/mycelium/apps/volunteers/templates/volunteers/_people_volunteer_tab.html
+++ b/mycelium/apps/volunteers/templates/volunteers/_people_volunteer_tab.html
@@ -8,9 +8,15 @@
 	<box_content>
 	<span class="edit_mode_on">
 	<form id="new_completed_volunteer_shift" action="{% url volunteers:save_completed_volunteer_shift person.volunteer.pk %}" method="POST">{% csrf_token %}
-		{% generic_editable_field form.duration %}
-		{% generic_editable_field form.date %}
-		{% generic_editable_field form.shift %}		
+		<dive class="sentence">
+		<span class="duration">{{form.duration}}</span> 
+		<span class="sentence_fragment">hours on</span>
+		<span class="date">{{form.date}}</span> 
+		<span class="sentence_fragment">for</span>
+		<span class="shift">{{form.shift}}</span>
+		<span class="sentence_fragment">. </span>
+		</dive>
+		
 		<form_actions>
 			<input type="submit" class="mycelium_btn" value="Add Shift">
 		</form_actions>
