--- a/mycelium/apps/volunteers/templates/volunteers/_people_volunteer_tab.html
+++ b/mycelium/apps/volunteers/templates/volunteers/_people_volunteer_tab.html
@@ -6,16 +6,18 @@
 	</tab_title>
 	</tab_title_container>
 	<box_content>
-	<span class="edit_mode_on">
 	<form id="new_completed_volunteer_shift" action="{% url volunteers:save_completed_volunteer_shift person.volunteer.pk %}" method="POST">{% csrf_token %}
-		<dive class="sentence">
+	<span class="edit_mode_on">
+		<div class="sentence">
+		<span class="sentence_fragment">Add</span>
 		<span class="duration">{{form.duration}}</span> 
 		<span class="sentence_fragment">hours on</span>
 		<span class="date">{{form.date}}</span> 
 		<span class="sentence_fragment">for</span>
 		<span class="shift">{{form.shift}}</span>
 		<span class="sentence_fragment">. </span>
-		</dive>
+		</div>
+		</span>
 		
 		<form_actions>
 			<input type="submit" class="mycelium_btn" value="Add Shift">
