--- a/mycelium/apps/volunteers/templates/volunteers/_people_volunteer_tab.html
+++ b/mycelium/apps/volunteers/templates/volunteers/_people_volunteer_tab.html
@@ -20,7 +20,7 @@
 		</span>
 		
 		<form_actions>
-			<input type="submit" class="mycelium_btn" value="Add Shift">
+			<input type="submit" class="mycelium_btn add_shift_btn" value="Add Shift">
 		</form_actions>
 		<box_close>
 			<a href="#" class="mycelium_btn mycelium_grey cancel_add_btn">Cancel</a>
