fixed fragments to handle multiple fragments

--- a/mycelium/apps/people/templates/people/organization.html
+++ b/mycelium/apps/people/templates/people/organization.html
@@ -65,7 +65,7 @@ $(function(){
 	<a class="detail_tab current" href="#">People</a>
 	<a class="detail_tab" href="#">Donor</a>
 </detail_tabs>
-<detail_tab_contents id="detail_tab_contents" class="organizations_people">
+<detail_tab_contents class="organizations_people">
 	<fragment name="detail_tab" action="replace">
 	<tabbed_box class="with_button closed" name="add_a_person">
 		<tab_title_container>	
