--- a/mycelium/apps/volunteers/templates/volunteers/_completed_volunteer_shift_row.html
+++ b/mycelium/apps/volunteers/templates/volunteers/_completed_volunteer_shift_row.html
@@ -2,4 +2,5 @@
 	<td class="duration">{{cs.duration|html_fraction|safe}} hour{{cs.duration|pluralize}}</td>
 	<td class="date">{{cs.date|naturalday}}</td>
 	<td class="shift">{% if cs.shift %} on {{cs.shift}}{% else %}on an unscheduled shift.{% endif %}</td>
+	<td class="delete_shift"><a href="{% url volunteers:delete_completed_volunteer_from_people_tab cs.pk %}" class="delete_shift_btn mycelium_delete_btn mycelium_active_grey mycelium_small_btn mycelium_btn">Delete Shift</a></td>	
 </tr>
