--- a/mycelium/apps/volunteers/templates/volunteers/_people_volunteer_tab.html
+++ b/mycelium/apps/volunteers/templates/volunteers/_people_volunteer_tab.html
@@ -1,4 +1,5 @@
 {% load i18n generic_fields friendly_data_formatting humanize %}
+<tab_contents class="people_volunteer_tab">
 <table class="two_column_70_30">
 <tr>
 <td class="column_1">
@@ -91,3 +92,4 @@
 </td>
 </tr>
 </table>
+</tab_contents>
