--- a/mycelium/apps/donors/templates/donors/_donor_tags.html
+++ b/mycelium/apps/donors/templates/donors/_donor_tags.html
@@ -1,6 +1,6 @@
-{% for t in donor.alphabetical_tags %}
+{% for t in obj.alphabetical_tags %}
 <tag>
-	<a href="{% url donors:remove_donor_tag donor.pk %}?tag={{t.name|urlencode}}" class="remove_tag_link"> </a>
+	<a href="{{delete_tag_url}}?tag={{t.name|urlencode}}" class="remove_tag_link"> </a>
 	<name>{{t.name}}</name>
 </tag>
 {% endfor %}
