--- a/mycelium/apps/generic_tags/templates/generic_tags/_tags_and_add_tag.html
+++ b/mycelium/apps/generic_tags/templates/generic_tags/_tags_and_add_tag.html
@@ -1,3 +1,4 @@
+<tags>
 <fragment name="{{namespace_string}}_tags" action="replace">
 	{% include "generic_tags/_tag_list.html" %}
 </fragment>
@@ -13,3 +14,4 @@
 </fragment>
 </search_results>
 </form>
+</tags>
