--- a/mycelium/apps/generic_tags/templates/generic_tags/_tag_list.html
+++ b/mycelium/apps/generic_tags/templates/generic_tags/_tag_list.html
@@ -1,6 +1,6 @@
 {% for t in obj.alphabetical_tags %}
 <tag>
-	<a href="{% url donors:remove_tag obj.pk %}?tag={{t.name|urlencode}}" class="remove_tag_link"> </a>
+	<a href="{{delete_tag_url}}?tag={{t.name|urlencode}}" class="remove_tag_link"> </a>
 	<name>{{t.name}}</name>
 </tag>
 {% endfor %}
