--- a/mycelium/apps/people/templates/people/person.html
+++ b/mycelium/apps/people/templates/people/person.html
@@ -1,5 +1,5 @@
 {% extends "people/base.html" %}
-{% load i18n generic_fields friendly_data_formatting generic_tags %}
+{% load i18n generic_fields friendly_data_formatting generic_tag_tags %}
 {% block title %}People - {{person.full_name}}{% endblock %}
 {% block css %}{{block.super}}
 {% generic_field_css %}
@@ -90,7 +90,7 @@ $(function(){
 </div>
 
 <div class="general_person_tags">
-{% render_tags_and_add_tag person "person" "people" %}
+{% render_tags_and_add_tag person "people" "person"  %}
 </div>
 
 <detail_tabs update_url="{% url people:tab_contents person.pk %}">
