--- a/mycelium/apps/people/templates/people/search.html
+++ b/mycelium/apps/people/templates/people/search.html
@@ -5,6 +5,7 @@
 <script type="text/javascript" charset="utf-8">
 	var SEARCH_URL = "{% url people:search_results %}";
 </script>
+<script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/mycelium/mycelium_search.js"> </script>
 <script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/mycelium/people_search.js"> </script>
 {% endblock %}
 {% block page_content %}
