fixing up other searches

--- a/mycelium/templates/mycelium_base.html
+++ b/mycelium/templates/mycelium_base.html
@@ -11,6 +11,7 @@
 <script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery.autogrow.js"> </script>
 <script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery.form.js"> </script>
 <script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/mycelium/mycelium_elements.js"> </script>
+<script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/mycelium/mycelium_search.js"> </script>
 {% endblock %}
 {% block content %}
 	<span id="test_badge"></span>
