--- a/mycelium/apps/donors/templates/donors/_people_donor_tab.html
+++ b/mycelium/apps/donors/templates/donors/_people_donor_tab.html
@@ -48,7 +48,7 @@
 		{% for year_of_donations in person.donor.donations_by_year %}
 		<tr class="year_overview">
 			<td class="year">{{year_of_donations.year}}</td>
-			<td class="total_number_of_donations">{{year_of_donations.total_donations|floatformat:"0"}} donation{{year_of_donations.total_number_of_donations|pluralize}}</td>
+			<td class="total_number_of_donations">{{year_of_donations.total_number_of_donations|floatformat:"0"}} donation{{year_of_donations.total_number_of_donations|pluralize}}</td>
 			<td class="total_donations">totalling ${{year_of_donations.total_donations|floatformat:"2"}}</td>
 			<td class="details_link"><a href="#" class="year_details_link">See details</a></td>
 		</tr>
