--- a/media/css/error_pages.css
+++ b/media/css/error_pages.css
@@ -1,10 +1,34 @@
 #error_message {
-	width: 60%;
+	width: 70%;
 	margin: 40px auto;
 }
 #error_message .adorable_image {
 	text-align: center;
+	margin-bottom: 20px;
 }
 #error_message h1 {
 	text-align: center;
+	font-size: 36px;
+}
+.detail_box {
+	border: 1px solid #DDD;
+	padding: 10px;
+	box-shadow: 		2px 2px 4px rgba(0,0,0,0.35);
+	-moz-box-shadow:	2px 2px 4px rgba(0,0,0,0.35);
+	-khtml-box-shadow: 	2px 2px 4px rgba(0,0,0,0.35);
+	-webkit-box-shadow: 2px 2px 4px rgba(0,0,0,0.35);
+	background-color: #FDFDFd;
+	border-radius: 12px;
+	-moz-border-radius: 12px;
+	-webkit-border-radius: 12px;	
+}
+.detail_text {
+	width: 85%;
+	margin: 0px auto;
+
+}
+body {
+	background-color: #DDD;
+	height: 100%;
+
 }
