--- a/mycelium/templates/500.html
+++ b/mycelium/templates/500.html
@@ -2,17 +2,33 @@
    "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="en">
 <head>
-	<title>{% trans "Oops, we've got a problem!"%}</title>
+	<title>{% trans "500 Error - Unable to load the requested page!"%}</title>
+	<link rel="stylesheet" href="http://www.agoodcloud.com/media/css/main.css" type="text/css" media="screen" title="" charset="utf-8">
+	<link rel="stylesheet" href="http://www.agoodcloud.com/media/css/error_pages.css" type="text/css" media="screen" title="" charset="utf-8">
 </head>
 <body>
 	
-	<div id="temporary_message">
-	<h1>{% trans "Oops."%}</h1>
-	
+	<div id="error_message">
+	<div class="adorable_image">
+	<img src="http://www.agoodcloud.com/media/images/icon-raincloud-400.png" />
+	</div>
+	<div class="detail_box">
+	<h1>How Embarrassing. We ran into problems loading that page.</h1>
+
 	<div class="detail_text">
-	{% trans "Looks like we've hit a problem loading that page."%}<br/><br/>
-	{% trans "Sorry about that - we've been emailed about your error, and will be working on it shortly!" %}</a>.
-	{% trans "Thanks!"%}
+	After the last action you took, GoodCloud had a problem loading the page to send back to you.<br/><br/>
+
+	The good news - we've been emailed with the details of what went wrong, and will be getting whatever happened fixed up!<br/>
+	The bad news - if you were trying to change something, or take an action, those changes may or may not have gone through. Please check, and make sure!
+	<br/><br/>
+	We're sorry.  If you're running into this on a consistent basis, or just want to talk, as always, feel free to send us an email, or give us a call!<br/><br/>
+
+	Some useful places to go from here:
+	<ul>
+	<li><a href="javascript:window.history.go(-1);">Back to the last page you were on</a></li>
+	<li><a href="{% url marketing_site:home %}">GoodCloud Home</a></li>
+	</ul>
+	</div>
 	</div>
 	</div>
 </body>
