--- a/mycelium/templates/502.html
+++ b/mycelium/templates/502.html
@@ -1,8 +1,8 @@
-{% load i18n %}<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"
    "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="en">
 <head>
-	<title>{% trans "500 Error - Unable to load the requested page!"%}</title>
+	<title>500 Error - Unable to load the requested page!</title>
 	<link rel="stylesheet" href="http://www.agoodcloud.com/media/css/main.css" type="text/css" media="screen" title="" charset="utf-8">
 	<link rel="stylesheet" href="http://www.agoodcloud.com/media/css/error_pages.css" type="text/css" media="screen" title="" charset="utf-8">
 </head>
