--- a/mycelium/templates/502.html
+++ b/mycelium/templates/502.html
@@ -2,11 +2,11 @@
    "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="en">
 <head>
-	<title>500 Error - Unable to load the requested page!</title>
+	<title>We're upgrading GoodCloud - be right back!</title>
 	<link rel="stylesheet" href="http://www.agoodcloud.com/media/css/main.css" type="text/css" media="screen" title="" charset="utf-8">
 	<link rel="stylesheet" href="http://www.agoodcloud.com/media/css/error_pages.css" type="text/css" media="screen" title="" charset="utf-8">
 </head>
-<body>
+<body class="502">
 	
 	<div id="error_message">
 	<div class="adorable_image">
