--- a/mycelium/templates/base.html
+++ b/mycelium/templates/base.html
@@ -1,4 +1,4 @@
-{% load i18n cache analytics %}<!doctype html> 
+{% load i18n cache analytics django_static %}<!doctype html> 
 <!--[if lt IE 7 ]> <html lang="en" class="no-js ie6"> <![endif]-->
 <!--[if IE 7 ]>    <html lang="en" class="no-js ie7"> <![endif]-->
 <!--[if IE 8 ]>    <html lang="en" class="no-js ie8"> <![endif]-->
@@ -15,21 +15,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="{{FAVICON_URL}}">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-
-  <link rel="stylesheet" href="{{ MEDIA_URL }}css/style.css?v=2">
+{% slimall %}
+  <link rel="stylesheet" href="{{ MEDIA_URL }}css/style.css">
   <link rel="stylesheet" href="{{ MEDIA_URL }}css/main.css" type="text/css" media="screen" title="" charset="utf-8">
-
+{% endslimall %}
   {# <!--	Uncomment if you are specifically targeting less enabled mobile browsers   --> #}
   {# <link rel="stylesheet" media="handheld" href="css/handheld.css?v=2"> #}
   {% block css %}{% endblock %}
   <script src="{{MEDIA_URL}}js/libs/modernizr-1.6.min.js"></script>
 {% block javascript %}
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
+  {% slimall %}
   <script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery-ui.js"> </script>
   <script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery.django.csrf.js"> </script>
   <script>!window.jQuery && document.write(unescape('%3Cscript src="{{MEDIA_URL}}js/contrib/jquery.js"%3E%3C/script%3E'))</script>
   <script src="{{MEDIA_URL}}js/plugins.js"></script>
   <script src="{{MEDIA_URL}}js/script.js"></script>
+  {% endslimall %}
   <!--[if lt IE 7 ]>
     <script src="{{MEDIA_URL}}js/libs/dd_belatedpng.js"></script>
     <script> DD_belatedPNG.fix('img, .png_bg');
