--- a/mycelium/templates/base.html
+++ b/mycelium/templates/base.html
@@ -16,8 +16,8 @@
   <link rel="shortcut icon" href="{{FAVICON_URL}}">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 {% slimall %}
-  <link rel="stylesheet" href="{{ MEDIA_URL }}css/style.css">
-  <link rel="stylesheet" href="{{ MEDIA_URL }}css/main.css" type="text/css" media="screen" title="" charset="utf-8">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/main.css" type="text/css" media="screen" title="" charset="utf-8">
 {% endslimall %}
   {# <!--	Uncomment if you are specifically targeting less enabled mobile browsers   --> #}
   {# <link rel="stylesheet" media="handheld" href="css/handheld.css?v=2"> #}
@@ -26,11 +26,11 @@
 {% block javascript %}
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
   {% slimall %}
-  <script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery-ui.js"> </script>
-  <script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery.django.csrf.js"> </script>
-  <script>!window.jQuery && document.write(unescape('%3Cscript src="{{MEDIA_URL}}js/contrib/jquery.js"%3E%3C/script%3E'))</script>
-  <script src="{{MEDIA_URL}}js/plugins.js"></script>
-  <script src="{{MEDIA_URL}}js/script.js"></script>
+  <script type="text/javascript" charset="utf-8" src="/js/contrib/jquery-ui.js"> </script>
+  <script type="text/javascript" charset="utf-8" src="/js/contrib/jquery.django.csrf.js"> </script>
+  <script>!window.jQuery && document.write(unescape('%3Cscript src="/js/contrib/jquery.js"%3E%3C/script%3E'))</script>
+  <script src="/js/plugins.js"></script>
+  <script src="/js/script.js"></script>
   {% endslimall %}
   <!--[if lt IE 7 ]>
     <script src="{{MEDIA_URL}}js/libs/dd_belatedpng.js"></script>
